k8s/apps/contact-service/contact-service.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: contact

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contact-service
  namespace: contact
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contact-service
  template:
    metadata:
      labels:
        app: contact-service
    spec:
      imagePullSecrets:
      - name: contact-service-secrets
      containers:
      - name: contact-service
        image: ghcr.io/szeigo/contact-service:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8066
          name: http
        volumeMounts:
        - name: logs
          mountPath: /app/logs
      volumes:
      - name: logs
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: contact-service
  namespace: contact
spec:
  type: ClusterIP
  selector:
    app: contact-service
  ports:
  - name: http
    port: 8066
    targetPort: 8066

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contact-service
  namespace: contact
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - kontakt.norsemen.io
    secretName: letsencrypt-tls
  rules:
  - host: kontakt.norsemen.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: contact-service
            port:
              number: 8066
